# mcp_solve-it

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  run.py
config/: default.toml
docs/: ARCHITECTURE.md  TROUBLESHOOTING.md
src/mcp_chassis/: __init__.py  __main__.py  config.py  context.py  errors.py  logging_config.py  server.py
src/mcp_chassis/diagnostics/: __init__.py  health.py
src/mcp_chassis/extensions/: __init__.py  batch.py  solveit_init.py
src/mcp_chassis/extensions/prompts/: __init__.py
src/mcp_chassis/extensions/resources/: __init__.py
src/mcp_chassis/extensions/tools/: __init__.py  solveit_tools.py
src/mcp_chassis/middleware/: __init__.py  pipeline.py
src/mcp_chassis/security/: __init__.py  auth.py  io_limits.py  profiles.py  rate_limiter.py  sanitization.py  validation.py
src/mcp_chassis/transport/: __init__.py  base.py  http_stub.py  stdio.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_solveit_differential.py  test_solveit_integration.py  test_stdio_integration.py
tests/unit/: __init__.py  test_auth.py  test_batch.py  test_config.py  test_context.py  test_env_file.py  test_errors.py  test_extensions.py  test_health.py  test_io_limits.py  test_logging_config.py  test_pipeline.py  test_rate_limiter.py  test_sanitization.py  test_server.py  test_solveit_init.py  test_solveit_tools.py  test_stdio_transport.py  test_validation.py
